# taxi-bot

./: .gitignore  Dockerfile  Procfile  README.md  alembic.ini  docker-compose.yml  env.dist  pyproject.toml
alembic/: env.py  sync-env.py
bot/: main.py  misc.py
bot/config/: config.json  config.py  example_config.json
bot/db/: __init__.py  database.py  models.py
bot/filters/: filter.py
bot/handlers/: admin.py  conversation.py  handler.py  order.py  user_misspell.py
bot/keyboards/: factory_kb.py  keyboard.py  main_menu.py
bot/lexicon/: lexicon.py
bot/middlewares/: __init__.py  db.py
bot/services/: __init__.py  db_service.py  helpcrunch.py  other.py  request.py  state.py  tasks.py
bot/states/: order_state.py  state.py
bot/utils/states/: order_state.py
migrations/: env.py
migrations/versions/: 0c135a3feb53_user_fix_overflow.py  10df184d7aa1_initial_tables.py  28cfd8e5455c_base_models.py  2c8407eeee88_add_message_id_to_order.py  497bab98165d_user_add_chat_id.py  596cef1383bf_operator_add_name_role_email_remove_.py  64601de81761_user_split_name_into_first_name_and_.py  c0dfb2a2fc4d_correct_updated_at_field_for_all_models.py  c3ace07b7c4e_user_change_primary_key_to_telegram_id.py  ca1ae8834604_user_telegram_id_should_be_unique.py  d7e26455944c_order_operator_id_may_be_nullable.py  d82133d0ff09_user_chat_id.py  e27c735dcf4c_user_rename_chat_id_to_customer_id.py  ef54f7702a5b_order_remove_duplicate_note_note_may_be_.py  f061411abcef_lexicon_model.py  fd09fc90e5a7_order_some_fields_shouldn_t_be_nullable.py
