[tool.poetry]
name = "taxi-bot"
version = "0.1.0"
description = ""
authors = ["Artem Holodyr <artemmholodyr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
