[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Artem Holodyr <artemmholodyr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
loguru = "^0.7.2"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
requests = "^2.31.0"
sqlalchemy-utils = "^0.41.2"
psycopg2 = "^2.9.9"
redis = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
